--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,15 @@
 pynput==1.7.6
+cryptography==41.0.7
 pyperclip==1.8.2
 pyautogui==0.9.54
-cryptography==41.0.7
 Pillow==10.2.0
-PyGObject==3.42.2 
+PyGObject==3.42.2
+psutil==5.9.8
+python-dateutil==2.8.2
+secure-smtplib==0.1.1
+jinja2==3.1.3
+flask==3.0.2
+flask-login==0.6.3
+plotly==5.19.0
+bcrypt==4.1.2
+pyarmor==8.5.1 
