--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,4 @@ Pillow==10.2.0
 PyGObject==3.42.2
 psutil==5.9.8
 python-dateutil==2.8.2
-secure-smtplib==0.1.1
-jinja2==3.1.3
-flask==3.0.2
-flask-login==0.6.3
-plotly==5.19.0
-bcrypt==4.1.2
-pyarmor==8.5.1 
+schedule==1.2.1 
