--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ cryptography==41.0.7
 pyperclip==1.8.2
 pyautogui==0.9.54
 Pillow==10.2.0
-PyGObject==3.42.2
+PyGObject==3.46.0
 psutil==5.9.8
 python-dateutil==2.8.2
-schedule==1.2.1 
+schedule==1.2.1
+pyinstaller==6.3.0 
